<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PFE BLS</string>
    <string name="Historique">Applications déjà créees</string>
    <string name="action_settings">Settings</string>
    <string name="btn_newApplication">Nouvelle</string>
    <string name="btn_historiqueApplication">Historique</string>
    <string name="btn_initialiseChamp">Réinitialiser</string>
    <string name="btn_saveFields">Enregister</string>
    <string name="btn_createApplication">Créer app.</string>
    <string name="title_activity_historique">Historique</string>
    <string name="btn_Actualiser">Actualiser</string>
    <string name="btn_Retour">Créer app.</string>
    <string name="btn_supprimer">Supprimer</string>
    <string name="supprimerApplication">Voulez vous supprimer cette entrée ?</string>
    <string name="supprimerAllApplications">Voulez vous supprimer tout l historique ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="SelectYes">Sélectionner</string>
    <string name="SelectNo">Annuler</string>

</resources>