<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:divider="?android:dividerVertical"
    android:showDividers="middle"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pfe.bls.HistoriqueActivity" >
<!-- android:background="@drawable/image1" -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/Historique"
        
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:gravity="center_vertical|center_horizontal"
        android:showDividers="middle" >

        <Button
            android:id="@+id/bntActualiser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Actualiser" />

        <Button
            android:id="@+id/bntSupprimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_supprimer" />

        <Button
            android:id="@+id/btnRetour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_Retour" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>