<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.MainActivity" >

    <!-- android:background="@drawable/images3" -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal" >

                <Button
                    android:id="@+id/btnNewApplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_newApplication" />

                <Button
                    android:id="@+id/btnClearFields"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_initialiseChamp" />

                <Button
                    android:id="@+id/btnShowHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_historiqueApplication" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nom d&apos;application"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="API"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    
                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="API Locale" />
                    
                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"                        
                        android:text="API 18" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="API 19" />

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="API 20" />
                    
                </RadioGroup>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sélectionner un ou plusieurs services"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ScrollView
                    android:id="@+id/scrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <CheckBox
                            android:id="@+id/checkBox1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Calculatrice" />

                        <CheckBox
                            android:id="@+id/checkBox2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Calendrier" />

                        <CheckBox
                            android:id="@+id/checkBox3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Messagerie" />

                        <CheckBox
                            android:id="@+id/checkBox4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Repertoire" />

                        <CheckBox
                            android:id="@+id/checkBox5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Géolocalisation" />

                        <CheckBox
                            android:id="@+id/checkBox6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Appel" />

                        <CheckBox
                            android:id="@+id/checkBox7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Consultation crédit" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_saveFields" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_createApplication" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>